Add notes for recitation 9

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                     <tr>
                         <td id="nav" valign="top"></td>
                         <td valign="top">
+<h3>2013-03-26: Recitation 9</h3>
+<p>
+In the ninth recitation we revisited the <a href="slides/posix-ipc.pdf">POSIX IPC API</a> and its usage for threading, semaphores and shared memory. We reexamined the <a href="https://github.com/cwru-eecs338/PosixExample">example POSIX threads code</a> and its usage of the pthreads functions. We also discussed the <a href="https://github.com/cwru-eecs338/python_semaphores">Python version of the &quot;semaphores&quot; example code</a>, which uses the <a href="http://semanchuk.com/philip/sysv_ipc/">sysv_ipc</a> module mentioned below. We examined the <a href="https://github.com/cwru-eecs338/python_threads">python_threads</a> example code, which uses Python's threading module. We discussed <a href="http://wiki.python.org/moin/GlobalInterpreterLock">important caveats in using Python threads</a> and also examined a <a href="https://github.com/cwru-eecs338/java_monitors">Java implementation of the dining philosophers algorithm</a>.
+</p>
 <h3>2013-03-19: Recitation 8</h3>
 <p>
 In the eigth recitation we revisited the System V <a href="slides/shared-memory.pdf">shared memory API</a> and its usage. We examined the <a href="https://github.com/cwru-eecs338/semaphores">example semaphore code</a>, focusing on the usage of the shared memory calls to  pass structured data between processes (specifically, casting the pointer returned by shmat() to whatever data type you want to use). We also briefly discussed System V shared memory and semaphore usage in Python through the <a href="http://semanchuk.com/philip/sysv_ipc/">sysv_ipc</a> package.
