--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,48 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>EECS 338, Spring 2013: Contact Info</title>
-        <link href="base-style.css" rel="stylesheet" type="text/css" />
-        <script type="text/javascript" src="nav.js"></script>
-    </head>
-    <body onLoad="nav('nav')">
-        <center>
-        <div class="content">
-            <div>
-              <h1>EECS 338: Operating Systems</h1>
-              <h2>Contact Information</h2>
-            </div>
-            <div>
-                <table cellspacing="20px">
-                    <COLGROUP width="20%" />
-                    <COLGROUP width="80%" />
-                    <tr>
-                        <td id="nav" valign="top"></td>
-                        <td valign="top">
-                          <h3>Eamon Johnson</h3>
-                          <dl>
-                            <dt>Email:</dt><dd><a href="mailto:ebj8@case.edu">ebj8@case.edu</a></dd>
-                            <dt>Office Hours:</dt> <dd>TBD</dd>
-                          </dl>
-                          <h3>Matthew Ruffalo</h3>
-                          <dl>
-                            <dt>Email:</dt><dd><a href="mailto:mmr15@case.edu">mmr15@case.edu</a></dd>
-                            <!--<dt>Phone:</dt><dd>(614) 296-9964</dd>-->
-			                      <dt>Office Hours:</dt> <dd>TBD</dd>
-                          </dl>
-                          <h3>IRC</h3>
-                          <a href="http://widget.mibbit.com/?server=irc.case.edu&channel=%23eecs338">Check out the #eecs338 channel on irc.case.edu</a>.
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-      </center>
-    </body>
+<head>
+	<title>EECS 338, Spring 2013: Contact Info</title>
+	<link href="base-style.css" rel="stylesheet" type="text/css"/>
+	<script type="text/javascript" src="nav.js"></script>
+</head>
+<body onLoad="nav('nav')">
+<center>
+	<div class="content">
+		<div>
+			<h1>EECS 338: Operating Systems</h1>
+
+			<h2>Contact Information</h2>
+		</div>
+		<div>
+			<table cellspacing="20px">
+				<COLGROUP width="20%"/>
+				<COLGROUP width="80%"/>
+				<tr>
+					<td id="nav" valign="top"></td>
+					<td valign="top">
+						<h3>Eamon Johnson</h3>
+						<dl>
+							<dt>Email:</dt>
+							<dd><a href="mailto:ebj8@case.edu">ebj8@case.edu</a></dd>
+							<dt>Office Hours:</dt>
+							<dd>TBD</dd>
+						</dl>
+						<h3>Matthew Ruffalo</h3>
+						<dl>
+							<dt>Email:</dt>
+							<dd><a href="mailto:mmr15@case.edu">mmr15@case.edu</a></dd>
+							<!--<dt>Phone:</dt><dd>(614) 296-9964</dd>-->
+							<dt>Office Hours:</dt>
+							<dd>TBD</dd>
+						</dl>
+						<h3>IRC</h3>
+						<a href="http://widget.mibbit.com/?server=irc.case.edu&channel=%23eecs338">Check
+							out the #eecs338 channel on irc.case.edu</a>.
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</center>
+</body>
 </html>
