Add recitation 11 info, slides

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 				<tr>
 					<td id="nav" valign="top"></td>
 					<td valign="top">
+						<h3>2013-04-09: Recitation 11</h3>
+
+						<p>
+							In the eleventh recitation we discussed the usage of <a
+								href="slides/sockets.pdf">the Berkeley sockets API</a>, using
+							<a href="https://github.com/cwru-eecs338/sockets">example code by
+								Stuart Morgan</a>.
+						</p>
+
 						<h3>2013-04-02: Recitation 10</h3>
 
 						<p>
