change the title

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 						</p>
 
 
-						<h3>2014-02-04: Recitation 3 (system calls: fork and exec and the makefile)</h3>
-
+						<h3>Recitation 3 : system calls--fork and exec, and the makefile</h3>
+						<p>2014-02-04</p>
 						<p>
 							In the third recitation, we discussed process and two relevant system call in linux: fork and exec.
 							fork() is used to generate a child process which share the same code with parent process but run independently. 
@@ -152,14 +152,15 @@
 						
 						
 
-						<h3>2014-01-28: Recitation 2</h3>
-
+						<h3>Recitation 2</h3>
+						<p>2014-01-28</p>
 						<p>
 							Cancelled due to severe cold weather.
 						</p>
 
 
-						<h3>2014-01-21: Recitation 1 (Basic knowledge about C and linux)</h3>
+						<h3>Recitation 1 : Basic knowledge about C and linux</h3>
+						<p>2014-01-21</p>
 
 						<p>
 							The first recitation was an introduction to basic knowledge about 
