Update index.html and intro.html for Spring 2015
Signed-off-by: Carlin Jackson <carlin.jackson@cjackson-mbp-2.local>

--- a/intro.html
+++ b/intro.html
@@ -29,6 +29,7 @@
 	<li><a href="#screen">Screen</a></li>
 	<li><a href="#editor">Text Editors</a></li>
 	<li><a href="#pipes">Pipes</a></li>
+	<li><a href="#tutorial">Indepth C and Linux Tutorial</a></li>
 </ol>
 <h3><a name="connecting">Connecting to a Unix Lab Computer</a></h3>
 
@@ -241,6 +242,11 @@ in which case we could then kill the server using:
 <blockquote><code>ps ax &gt; processes.txt</code></blockquote>
 Likewise, we can use a file in place of stdin like so:
 <blockquote><code>grep -w vim &lt; processes.txt</code></blockquote>
+</p>
+<h3><a name="tutorial">Indepth C and Linux Tutorial</a></h3>
+<p>
+	For an indepth tutorial on coding C in a Linux environment, consider
+	<a href="http://how-to.linuxcareer.com/c-development-on-linux-introduction"><i>this excellent series.</i></a>
 </p>
 </td>
 </tr>
