--- a/contact.html
+++ b/contact.html
@@ -20,18 +20,24 @@
 				<tr>
 					<td id="nav" valign="top"></td>
 					<td valign="top">
-						<h3>Eamon Johnson</h3>
+						<h3><a href="https://www.linkedin.com/in/carlinjackson">Carlin Jackson</a></h3>
 						<dl>
 							<dt>Email:</dt>
-							<dd><a href="mailto:ebj8@case.edu">ebj8@case.edu</a></dd>
+							<dd><a href="mailto:carlin.jackson@case.edu">carlin.jackson@case.edu</a></dd>
 							<dt>Office Hours:</dt>
 							<dd>TBD</dd>
 						</dl>
-						<h3>Matthew Ruffalo</h3>
+						<h3>Rui Liu</h3>
 						<dl>
 							<dt>Email:</dt>
-							<dd><a href="mailto:mmr15@case.edu">mmr15@case.edu</a></dd>
-							<!--<dt>Phone:</dt><dd>(614) 296-9964</dd>-->
+							<dd><a href="mailto:rxl341@case.edu">rxl341@case.edu</a></dd>
+							<dt>Office Hours:</dt>
+							<dd>TBD</dd>
+						</dl>
+						<h3>Yigit Kucuk</h3>
+						<dl>
+							<dt>Email:</dt>
+							<dd><a href="mailto:yxk368@case.edu">yxk368@case.edu</a></dd>
 							<dt>Office Hours:</dt>
 							<dd>TBD</dd>
 						</dl>
