--- a/resources.html
+++ b/resources.html
@@ -22,7 +22,7 @@
 					<td valign="top">
 						<dl>
 							<dt><a href="http://art.cwru.edu/338.S15/">Course Website</a> (<a
-									href="338_mirror_02-29-12.tgz">mirror</a>)
+									href="338_mirror_02-29-12.tgz">Spring 2012 mirror</a>)
 							</dt>
 							<dd>The professor's course website contians numerous examples from
 								previous assignments and links to TA pages from previous years.
