--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 							C language and development on a Linux platform. Java and C were compared (similar syntax,
 							garbage collection vs manual memory management). All assignments in this course will be completed in C language.
 						</p>
-					<p>
-						For an indepth tutorial on coding C in a Linux environment, consider <a href="http://how-to.linuxcareer.com/c-development-on-linux-introduction"><i>this excellent series.</i></a>
-						Also, <a href="relevant materials/Linux Fundamentals.pdf"><i>Linux Fundamentals</i></a> is a great reference
-						for the basic commands in linux.
-					</p>
+						<p>
+							For an indepth tutorial on coding C in a Linux environment, consider <a href="http://how-to.linuxcareer.com/c-development-on-linux-introduction"><i>this excellent series.</i></a>
+							Also, <a href="relevant materials/Linux Fundamentals.pdf"><i>Linux Fundamentals</i></a> is a great reference
+							for the basic commands in linux.
+						</p>
 
 
 						<h3>Recitation 1: Introduction to EECS 338 and how to be successful in the course</h3>
@@ -61,11 +61,11 @@
 							<li>UNIX: C, shell, sys calls, etc</li>
 							<li>Concurrent Algorithms/Programming</li>
 							<li>Operating Systems</li>
-							<li>Ideally: Students not worry about dev environment &amp; C, only about concurrent programing and OS theory.</li>
+							<li>Ideally, students will not worry about the Linux dev environment &amp; C, but only about concurrent programing and OS theory.</li>
 							</ul>
 							<li>Grading & TA Communication:<br></li>
 							<ul>
-							<li>All emails subjects should be prefixed with "EECS 338: "</li>
+							<li>All email subjects should be prefixed with "EECS 338: "</li>
 							<li>Cc all TAs!!</li>
 							<li>Assignments will either be written algorithmic or coding based.</li>
 							<li>No rars, 7z, etc!!! Either zip or nothing!! Flat directories! No need for external libraries!</li>
