--- a/intro.html
+++ b/intro.html
@@ -59,8 +59,8 @@ appropriate field, and you will be prompted for a user name when you login.
 	Windows, Mac OS X, and Linux users can use a <a href="http://en.wikipedia.org/wiki/Graphical_user_interface">GUI</a> program called
 	<a href="https://filezilla-project.org/">Filezilla</a> to copy
 	files between the lab computer and your machine. The login process
-	is similar to that for PuTTY. Read <a href"https://wiki.filezilla-project.org/Using#Connecting_to_an_FTP_server">these instructions</a> 
-	for how to connect. (Note that you will be using the <i>SFTP</i>protocol <i>not FTP</i>, 
+	is similar to that for PuTTY. Read <a href="https://wiki.filezilla-project.org/Using#Connecting_to_an_FTP_server">these instructions</a> 
+	for how to connect. (Note that you will be using the <i>SFTP</i> protocol <i>not FTP</i>, 
 	so take care to regard the special <i>SFTP</i> instructions.) </p>
 
 <p>
