--- a/intro.html
+++ b/intro.html
@@ -69,7 +69,7 @@ appropriate field, and you will be prompted for a user name when you login.
 	please peruse <a href="http://www.hypexr.org/linux_scp_help.php">this website</a>, 
 	otherwise see below: </p>
 <p>
-	For example, to copy files in [dir] from your computer to the 
+	To copy files in [dir] from your computer to the 
 	lab computer, you can use this command on your computer:
 
 <blockquote><code>scp -r [dir] abc123@eecslinab.case.edu:</code></blockquote>
