--- a/index.html
+++ b/index.html
@@ -20,23 +20,18 @@
 				<tr>
 					<td id="nav" valign="top"></td>
 					<td valign="top">
-						<!--
+						
 						<h3>Recitation 3: system calls--fork and exec, and the makefile</h3>
 						<p>2015-02-03</p>
 						<p>
-							In the third recitation, we discussed process and two relevant system call in linux: fork and exec.
+							In the third recitation, C language code organization, Makefiles, and two system calls, fork and exec, were discussed.Makefiles are quite useful for compilation and linking, especially if the program contains several source files and header files. 
+							A tutorial on Makefiles can be found <a href="http://mrbook.org/tutorials/make/">here</a>.
 							fork() is used to generate a child process which share the same code with parent process but run independently.
 							The sample code for the usage of fork() is <a href="https://github.com/cwru-eecs338/fork_sample_code">here</a>. exec is actually a family of
 							linux system calls. This family consists of 6 different functions: execl, execv, execle, execve, execlp and execvp.
-							I demonstrate two sample codes one is for <a href="https://github.com/cwru-eecs338/exec_sample_code">execl</a>, the other is
-							for <a href="https://github.com/cwru-eecs338/exec_sample_code">execlp</a>.
+							Other demonstrated repositories were <a href="https://github.com/cwru-eecs338/exec_sample_code">execl</a> and <a href="https://github.com/cwru-eecs338/exec_sample_code">execlp</a>..
 						</p>
-
-						<p>
-							I also talked about the makefile in this recitation. The makefile is quite useful for compilation and linking, especially
-							if the program contains several source files and header files. A tutorial of makefile can be found <a href="http://mrbook.org/tutorials/make/">here</a>.
-						</p>
-					-->
+					
 						<h3>Recitation 2: Basic knowledge about C and linux</h3>
 						<p>2015-01-27</p>
 						<p>
