--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>EECS 338, Spring 2013: Contact Info</title>
+	<title>EECS 338, Fall 2015: Contact Info</title>
 	<link href="base-style.css" rel="stylesheet" type="text/css"/>
 	<script type="text/javascript" src="nav.js"></script>
 </head>
@@ -20,26 +20,33 @@
 				<tr>
 					<td id="nav" valign="top"></td>
 					<td valign="top">
-						<h3><a href="https://www.linkedin.com/in/carlinjackson">Carlin Jackson</a></h3>
+						<h3>Emilio Colindres</a></h3>
 						<dl>
 							<dt>Email:</dt>
-							<dd><a href="mailto:carlin.jackson@case.edu">carlin.jackson@case.edu</a></dd>
+							<dd><a href="mailto:exc231@case.edu">exc231@case.edu</a></dd>
+							<dt>Office Hours:</dt>
+							<dd>Wednesdays, 2:00pm-3:00pm</dd>
+						</dl>
+						<h3>Devyn Spillane</h3>
+						<dl>
+							<dt>Email:</dt>
+							<dd><a href="mailto:dms230@case.edu">dms230@case.edu</a></dd>
 							<dt>Office Hours:</dt>
 							<dd>TBD</dd>
 						</dl>
-						<h3>Rui Liu</h3>
+						<h3>Joseph Tate</h3>
 						<dl>
 							<dt>Email:</dt>
-							<dd><a href="mailto:rxl341@case.edu">rxl341@case.edu</a></dd>
+							<dd><a href="mailto:jgt17@case.edu">jgt17@case.edu</a></dd>
 							<dt>Office Hours:</dt>
-							<dd>TBD</dd>
+							<dd>Thursdays 11:30am-12:30pm</dd>
 						</dl>
-						<h3>Yigit Kucuk</h3>
+						<h3>James Du</h3>
 						<dl>
 							<dt>Email:</dt>
-							<dd><a href="mailto:yxk368@case.edu">yxk368@case.edu</a></dd>
+							<dd><a href="mailto:jhd70@case.edu">jhd70@case.edu</a></dd>
 							<dt>Office Hours:</dt>
-							<dd>TBD</dd>
+							<dd>Thursdays 11:30am-12:30pm</dd>
 						</dl>
 						<h3>IRC</h3>
 						<a href="http://widget.mibbit.com/?server=irc.case.edu&channel=%23eecs338">Check
