added link to rec. examples

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
 							
 						</p>
             -->
-
+                        <h3>Recitation Examples</h3>
+                        <p>
+                            Examples from recitations will be uploaded to <a href=https://github.com/cwru-eecs338/cwru-eecs338.github.com/tree/master/relevant%20materials>GitHub</a>. Additional lecture notes, when made available, will be found on this page.
+                        </p>
 
 
 						<h3>Summary</h3>
