added office hour information

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,10 @@
 			<h2>Contact Information</h2>
 		</div>
 		<div>
+            <p>
+                All office hours will be held in Olin 503.
+                The door is normally locked, so please knock for access.
+            </p>
 			<table cellspacing="20px">
 				<COLGROUP width="20%"/>
 				<COLGROUP width="80%"/>
@@ -32,7 +36,7 @@
 							<dt>Email:</dt>
 							<dd><a href="mailto:dms230@case.edu">dms230@case.edu</a></dd>
 							<dt>Office Hours:</dt>
-							<dd>TBD</dd>
+							<dd>Tuesdays, 12:00pm-1:00pm</dd>
 						</dl>
 						<h3>Joseph Tate</h3>
 						<dl>
