text changes for spring 2016

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>EECS 338, Fall 2015</title>
+	<title>CWRU EECS 338, Spring 2016</title>
 	<link href="base-style.css" rel="stylesheet" type="text/css"/>
 	<script type="text/javascript" src="nav.js"></script>
 </head>
@@ -9,9 +9,9 @@
 <center>
 	<div class="content">
 		<div>
-			<h1>EECS 338: Operating Systems</h1>
+			<h1>EECS 338: Introduction to Operating Systems and Concurrent Programming</h1>
 
-			<h2>Fall, 2015</h2>
+			<h2>Spring, 2016</h2>
 		</div>
 		<div>
 			<table cellspacing="20px">
