--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,7 @@
 <center>
 <div class="content">
 <div>
-	<h1>EECS 338: Operating Systems</h1>
+	<h1>CWRU EECS 338: <br>Introduction to Operating Systems and Concurrent Programming</h1>
 
 	<h2>Intro to Linux</h2>
 </div>
