added help info

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                             <li>Lectures: Monday/Wednesday: 4-5:15pm, @ Bingham 103</li>
                             <li>Recitation: Tuesday: 6-7pm @ Bingham 103</li>                   
                         </ul>
+                        <h3>Help</h3>
+                        <ul>
+                            <li>office hours: 3pm-5pm Tuesday and Thursday @ Olin 414</li>
+                            <li>email: please start the subject line with <span style="font-family: monospace;">eecs338</span></li>
+                        </ul>
                         <h3>Teaching Assistants</h3>
                         <ul>
                             <li>Emilio Colindres (exc231@case)</li>
