office hours update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                         </ul>
                         <h3>Help</h3>
                         <ul>
-                            <li>office hours: 3pm-5pm Tuesday and Thursday @ Olin 414</li>
+                            <li>Eamon's office hours: 3pm-5pm Tuesday and Thursday @ Olin 414</li>
+                            <li>Xiaojin's office hours: 11am-12pm Monday and Wednesday @ Olin 505</li>
                             <li>email: please start the subject line with <span style="font-family: monospace;">eecs338</span></li>
                         </ul>
                         <h3>Teaching Assistants</h3>
