--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <h3>Help</h3>
                         <ul>
                             <li>Eamon's office hours: 3pm-5pm Tuesday and Thursday @ Olin 414</li>
+                            <li>Emilio's office hours: 1:50pm-2:50pm Monday and Wednesday @ Olin 503</li>
                             <li>Xiaojin's office hours: 11am-12pm Monday and Wednesday @ Olin 505</li>
                             <li>email: please start the subject line with <span style="font-family: monospace;">eecs338</span></li>
                         </ul>
