office hours update

--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
                         </ul>
                         <h3>Help</h3>
                         <ul>
-                            <li>Eamon's office hours: 3pm-5pm Tuesday and Thursday @ Olin 414</li>
-                            <li>Emilio's office hours: 1:50pm-2:50pm Monday and Wednesday @ Olin 503</li>
-                            <li>Yuanxu's office hours: 2pm-3pm Thursday and Friday @ Olin 503</li> 
+                            <li>Eamon's office hours: 3-5pm Tuesday and Thursday @ Olin 414</li>
+                            <li>Emilio's office hours: 1:50-2:50pm Monday and Wednesday @ Olin 503</li>
+                            <li>Ke's office hours: 3-4pm Monday and 4-5pm Friday @ Olin 514</li> 
+                            <li>Yuanxu's office hours: 2-3pm Thursday and Friday @ Olin 503</li> 
                             <li>email: please start the subject line with <span style="font-family: monospace;">eecs338</span></li>
                         </ul>
                         <h3>Teaching Assistants</h3>
                         <ul>
                             <li>Emilio Colindres (exc231@case)</li>
-                            <!-- <li>Xiaojin Li (xxl509@case)</li> -->
+                            <li>Ke Hu (ke.hu@case)</li>
                             <li>Yuanxu Li (yuanxu.li@case)</li>
                         </ul>
 						<!--
