added pipes assignment to past assignments

--- a/past-assignments.html
+++ b/past-assignments.html
@@ -20,9 +20,13 @@
 				<tr>
 					<td id="nav" valign="top"></td>
 					<td valign="top">
-						2015 Fall: <a href="course-materials/past-assignments/2015-as1.pdf">assignment 1</a>, 
-                                   <a href="course-materials/past-assignments/2015-as1-solution.zip">solution</a>
-
+						Assignment 1, system calls (2015 Fall): <a href="course-materials/past-assignments/2015-as1.pdf">assignment</a>, 
+                                                  <a href="course-materials/past-assignments/2015-as1-solution.zip">solution</a>
+                        <br>
+						Assignment 2, pipes (2011 Spring): <a href="course-materials/past-assignments/2011-as2.pdf">assignment</a>, 
+                                                  <a href="course-materials/past-assignments/2011-as2-solution.c">solution</a>
+                        <br>
+                        
 					</td>
 				</tr>
 			</table>
