--- a/resources.html
+++ b/resources.html
@@ -21,17 +21,17 @@
 					<td id="nav" valign="top"></td>
 					<td valign="top">
 						<dl>
+							<dt><b>References</b><br><br></dt>
+                            <!--
 							<dt><a href="http://art.cwru.edu/338.S15/">Course Website</a> (<a
 									href="338_mirror_02-29-12.tgz">Spring 2012 mirror</a>)
 							</dt>
 							<dd>The professor's course website contians numerous examples from
 								previous assignments and links to TA pages from previous years.
 							</dd>
-							<dt><a href="http://www.virtualbox.org/">VirtualBox</a></dt>
-							<dd>Free, open source virtual machine software, if you want to try a
-								new OS (e.g. Linux) without partitioning or replacing your
-								current OS.
-							</dd>
+                            -->
+                            <dt><a href="http://beej.us/guide/">Beej's Guides</a></dt>
+                            <dd>Brian Hall's series of short, informative guides to C, Unix IPC, and the GNU Debugger. </dd>
 							<dt><a href="http://acm.case.edu/">Case ACM</a> &amp; <a
 									href="http://goto.case.edu/">CWRU Hacker Society</a></dt>
 							<dd>Campus organizations that feature tech talks and events
@@ -54,8 +54,14 @@
 											Threads, Third Edition</a></li>
 								</ul>
 							</dd>
-							<dt><b>Tools</b></dt>
-							<dd><a href="http://www.vim.org/">Vim</a>
+							<dt><b>Tools</b><br><br></dt>
+							<dt><a href="http://www.virtualbox.org/">VirtualBox</a></dt>
+							<dd>Free, open source virtual machine software, if you want to try a
+								new OS (e.g. Linux) without partitioning or replacing your
+								current OS.
+							</dd>
+							<dt><a href="http://www.vim.org/">Vim</a></dt>
+                            <dd>
 								<ul>
 									<li>
 										<a href="http://www.viemu.com/a_vi_vim_graphical_cheat_sheet_tutorial.html">Cheat
@@ -67,11 +73,11 @@
 									</li>
 								</ul>
 							</dd>
-							<dd><a href="http://www.gnu.org/software/gdb/">GNU Debugger
-								(gdb)</a></dd>
-							<dd><a href="http://valgrind.org/">Valgrind</a> (Memory debugging
+							<dt><a href="http://www.gnu.org/software/gdb/">GNU Debugger
+								(gdb)</a></dt>
+							<dt><a href="http://valgrind.org/">Valgrind</a> (Memory debugging
 								tool)
-							</dd>
+							</dt>
 						</dl>
 					</td>
 				</tr>
